Criação da conexão de banco de dados

--- a/ListadeCompras/app/src/main/res/layout/activity_lista.xml
+++ b/ListadeCompras/app/src/main/res/layout/activity_lista.xml
@@ -14,7 +14,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="vertical" >
+
+            <fragment
+                android:id="@+id/fragment"
+                android:name="com.rodmor.listadecompras.ItemDaLista"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
     </ScrollView>
 
     <Button
