--- a/ListadeCompras/app/src/main/res/layout/activity_adicionar_item.xml
+++ b/ListadeCompras/app/src/main/res/layout/activity_adicionar_item.xml
@@ -135,7 +135,7 @@
         app:layout_constraintTop_toBottomOf="@+id/radioCategoria" />
 
     <TextView
-        android:id="@+id/preco"
+        android:id="@+id/textPreco"
         android:layout_width="0dp"
         android:layout_height="45dp"
         android:layout_marginStart="16dp"
@@ -174,6 +174,6 @@
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/preco" />
+        app:layout_constraintTop_toBottomOf="@+id/textPreco" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
