--- a/ListadeCompras/app/src/main/res/layout/activity_main.xml
+++ b/ListadeCompras/app/src/main/res/layout/activity_main.xml
@@ -8,21 +8,23 @@
 
     <Button
         android:id="@+id/listar"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/verification_of_delivery_list_clipboard_symbol"
+        android:background="@drawable/lista"
         android:onClick="iniciarListas"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textlista"
+        android:id="@+id/text_listar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/text_view_lista"
+        android:textColor="@color/design_default_color_on_secondary"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,21 +32,23 @@
 
     <Button
         android:id="@+id/comprar"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="32dp"
-        android:background="@drawable/shopping_cart"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/carrinho"
         android:onClick="iniciarCompras"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textlista" />
+        app:layout_constraintTop_toBottomOf="@+id/text_listar" />
 
     <TextView
-        android:id="@+id/textcomprar"
+        android:id="@+id/text_comprar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/text_view_compras"
+        android:textColor="@color/design_default_color_on_secondary"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
