--- a/ListadeCompras/app/src/main/res/layout/item_da_compra.xml
+++ b/ListadeCompras/app/src/main/res/layout/item_da_compra.xml
@@ -7,18 +7,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/frag_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textColor="@color/design_default_color_on_secondary"
-        android:textSize="18sp"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/frag_nome"
+        android:id="@+id/compras_nome"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -30,12 +19,12 @@
         android:textColor="@color/design_default_color_on_secondary"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/frag_text_preco"
-        app:layout_constraintStart_toEndOf="@+id/frag_id"
+        app:layout_constraintEnd_toStartOf="@+id/compras_text_quant"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/frag_text_preco"
+        android:id="@+id/compras_text_preco"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -43,24 +32,25 @@
         android:text="@string/text_rs"
         android:textColor="@color/design_default_color_on_secondary"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/frag_preco"
+        app:layout_constraintEnd_toStartOf="@+id/compras_valor"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/frag_preco"
+    <EditText
+        android:id="@+id/compras_valor"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:gravity="center_vertical"
+        android:layout_height="43dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:inputType="numberDecimal"
+        android:selectAllOnFocus="true"
+        android:singleLine="true"
         android:textColor="@color/design_default_color_on_secondary"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/frag_text_quant"
+        app:layout_constraintEnd_toStartOf="@+id/compras_uncheck"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/frag_text_quant"
+        android:id="@+id/compras_text_quant"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -70,23 +60,11 @@
         android:text="@string/text_quant"
         android:textColor="@color/design_default_color_on_secondary"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/frag_botao_menos"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/frag_botao_menos"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:background="@drawable/botao_menos"
-        android:onClick="clickMenos"
-        app:layout_constraintEnd_toStartOf="@+id/frag_quant"
+        app:layout_constraintEnd_toStartOf="@+id/compras_quant"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/frag_quant"
+        android:id="@+id/compras_quant"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -95,23 +73,45 @@
         android:gravity="center"
         android:textColor="@color/design_default_color_on_secondary"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/frag_botao_mais"
+        app:layout_constraintEnd_toStartOf="@+id/compras_text_preco"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/frag_botao_mais"
+        android:id="@+id/compras_uncheck"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:background="@drawable/botao_mais"
-        android:onClick="clickMais"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:background="@drawable/uncheck"
+        android:enabled="true"
+        android:onClick="clickUncheck"
+        android:visibility="visible"
+        app:layout_constraintEnd_toStartOf="@+id/compras_check"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/compras_check"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:background="@drawable/check"
+        android:onClick="clickCheck"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/compras_posicao"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
-        android:id="@+id/frag_divider"
+        android:id="@+id/divider"
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="8dp"
@@ -119,6 +119,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frag_nome" />
+        app:layout_constraintTop_toBottomOf="@+id/compras_nome" />
+
+    <View
+        android:id="@+id/compras_risco"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:background="@color/design_default_color_on_secondary"
+        app:layout_constraintBottom_toBottomOf="@+id/compras_text_quant"
+        app:layout_constraintEnd_toEndOf="@+id/compras_valor"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/compras_text_quant" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
