--- a/ListadeCompras/app/src/main/res/layout/activity_compras.xml
+++ b/ListadeCompras/app/src/main/res/layout/activity_compras.xml
@@ -53,18 +53,77 @@
 
     </androidx.cardview.widget.CardView>
 
-    <ScrollView
+    <ListView
+        android:id="@+id/compras_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toBottomOf="@+id/cabecalho"
-        tools:layout_editor_absoluteX="0dp">
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/divider2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cabecalho">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+    </ListView>
 
-        </LinearLayout>
-    </ScrollView>
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toTopOf="@+id/compras_valor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/compras_valor"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:hint="0,00"
+        android:inputType="number|numberDecimal"
+        android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:textColor="@color/design_default_color_on_secondary"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/compras_botao_terminar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/compras_texto_avulso"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="@string/valor_avulso"
+        android:textColor="@color/design_default_color_on_secondary"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/compras_botao_terminar"
+        app:layout_constraintEnd_toStartOf="@+id/compras_valor"
+        app:layout_constraintTop_toBottomOf="@+id/divider2" />
+
+    <Button
+        android:id="@+id/compras_botao_mais"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:background="@drawable/botao_mais"
+        android:onClick="somaAvulso"
+        app:layout_constraintBottom_toTopOf="@+id/compras_botao_terminar"
+        app:layout_constraintStart_toEndOf="@+id/compras_valor"
+        app:layout_constraintTop_toBottomOf="@+id/compras_view" />
+
+    <Button
+        android:id="@+id/compras_botao_terminar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:background="@color/colorPrimary"
+        android:onClick="finalizarCompras"
+        android:text="@string/finalizar_compras"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
