--- a/ListadeCompras/app/src/main/res/layout/activity_adicionar_item.xml
+++ b/ListadeCompras/app/src/main/res/layout/activity_adicionar_item.xml
@@ -33,7 +33,7 @@
         android:gravity="center_vertical"
         android:hint="@string/nome_item"
         android:inputType="textPersonName"
-        android:textColor="@color/design_default_color_on_secondary"
+        android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -49,7 +49,7 @@
         android:layout_marginRight="16dp"
         android:gravity="center_vertical"
         android:text="@string/categoria_item"
-        android:textColor="@color/design_default_color_on_secondary"
+        android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,28 +74,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/cat_condimentos"
-            android:textColor="@color/design_default_color_on_secondary" />
+            android:textColor="@android:color/black" />
 
         <RadioButton
             android:id="@+id/radio_button_bol"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/cat_bolacha"
-            android:textColor="@color/design_default_color_on_secondary" />
+            android:textColor="@android:color/black" />
 
         <RadioButton
             android:id="@+id/radio_button_frio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/cat_frios"
-            android:textColor="@color/design_default_color_on_secondary" />
+            android:textColor="@android:color/black" />
 
         <RadioButton
             android:id="@+id/radio_button_higi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/cat_higiene"
-            android:textColor="@color/design_default_color_on_secondary" />
+            android:textColor="@android:color/black" />
     </RadioGroup>
 
     <TextView
@@ -109,7 +109,7 @@
         android:layout_marginRight="8dp"
         android:gravity="center"
         android:text="@string/quant_item"
-        android:textColor="@color/design_default_color_on_secondary"
+        android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/botao_menos"
         app:layout_constraintHorizontal_bias="1.0"
@@ -139,7 +139,7 @@
         android:gravity="center"
         android:inputType="number"
         android:text="0"
-        android:textColor="@color/design_default_color_on_secondary"
+        android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/botao_mais"
         app:layout_constraintTop_toBottomOf="@+id/radio_categoria" />
@@ -167,7 +167,7 @@
         android:layout_marginRight="8dp"
         android:gravity="center"
         android:text="@string/preco_item"
-        android:textColor="@color/design_default_color_on_secondary"
+        android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/edit_preco"
         app:layout_constraintStart_toStartOf="parent"
@@ -184,7 +184,7 @@
         android:gravity="center"
         android:hint="0,00"
         android:inputType="numberDecimal"
-        android:textColor="@color/design_default_color_on_secondary"
+        android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_quantidade" />
 
