--- a/ListadeCompras/app/src/main/res/layout/activity_compras.xml
+++ b/ListadeCompras/app/src/main/res/layout/activity_compras.xml
@@ -82,7 +82,7 @@
         android:inputType="number|numberDecimal"
         android:selectAllOnFocus="true"
         android:singleLine="true"
-        android:textColor="@color/design_default_color_on_secondary"
+        android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/compras_botao_terminar"
         app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +95,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="@string/valor_avulso"
-        android:textColor="@color/design_default_color_on_secondary"
+        android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/compras_botao_terminar"
         app:layout_constraintEnd_toStartOf="@+id/compras_valor"
