--- a/ListadeCompras/app/src/main/res/layout/activity_main.xml
+++ b/ListadeCompras/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/text_view_lista"
-        android:textColor="@color/design_default_color_on_secondary"
+        android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/text_view_compras"
-        android:textColor="@color/design_default_color_on_secondary"
+        android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
